--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
   project: "Project"
   projects: "Projects"
 
+  valid: "Valid"
+  invalid: "Invalid"
   stats: "Stats"
   events: "Events"
   save: "Save"
@@ -420,6 +422,7 @@ en:
   skills:
     technical: 'Technical'
     not_technical: 'Not technical'
+    activate_sure: '¿Are you sure you want to activate this skill?'
     addrm:
       select: 'seleccionar habilidad'
       nomore_add: "No more skills available to add to"
