--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -33,6 +33,8 @@ es:
   project: "Proyecto"
   projects: "Proyectos"
 
+  valid: "Válida"
+  invalid: "Inválida"
   stats: "Estadísticas"
   events: "Eventos"
   save: "Guardar"
@@ -426,6 +428,7 @@ es:
   skills:
     technical: 'Técnica'
     not_technical: 'No técnica'
+    activate_sure: '¿Está seguro que desea activar esta habilidad?'
     addrm:
       select: 'seleccionar habilidad'
       nomore_add: "No hay más habilidades disponibles para agregar a"
